# backend/docs/swagger.json
@@ -319,7 +319,13 @@
                                 "email": {
                                     "type": "string"
                                 },
+                                "full_name": {
+                                    "type": "string"
+                                },
                                 "password": {
+                                    "type": "string"
+                                },
+                                "phone": {
                                     "type": "string"
                                 },
                                 "role": {
@@ -520,14 +526,35 @@
         "logistics-app_backend_internal_domain.User": {
             "type": "object",
             "properties": {
+                "created_at": {
+                    "type": "string"
+                },
+                "default_address_id": {
+                    "type": "integer"
+                },
                 "email": {
+                    "type": "string"
+                },
+                "full_name": {
                     "type": "string"
                 },
                 "id": {
                     "type": "integer"
                 },
+                "is_active": {
+                    "type": "boolean"
+                },
+                "phone": {
+                    "type": "string"
+                },
                 "role": {
                     "$ref": "#/definitions/logistics-app_backend_internal_domain.Role"
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "updated_by": {
+                    "type": "integer"
                 }
             }
         }
